--- a/backend/tsconfig.build.json
+++ b/backend/tsconfig.build.json
@@ -2,7 +2,9 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "declaration": false,
-    "noEmit": true
+    "noEmit": false,
+    "outDir": "./dist"
   },
-  "include": ["src/**/*", "test/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
 }
